Partially migrate from PowerMock to Mockito (#1097)