@@ -16,16 +16,17 @@
 
 package org.vividus.bdd.steps.ui.web;
 
-import static org.mockito.ArgumentMatchers.any;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.mockConstruction;
+import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
-import static org.mockito.Mockito.withSettings;
 import static org.vividus.ui.web.action.search.WebLocatorType.CASE_SENSITIVE_TEXT;
 
 import java.io.ByteArrayInputStream;
@@ -34,25 +35,19 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import org.apache.commons.io.FileUtils;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
-import org.openqa.selenium.SearchContext;
+import org.mockito.MockedConstruction;
+import org.mockito.MockedStatic;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
-import org.openqa.selenium.WrapsDriver;
 import org.openqa.selenium.remote.RemoteWebDriver;
-import org.powermock.api.mockito.PowerMockito;
-import org.powermock.core.classloader.annotations.PrepareForTest;
-import org.powermock.modules.junit4.PowerMockRunner;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.ResourceLoader;
 import org.springframework.util.ResourceUtils;
@@ -70,8 +65,8 @@ import org.vividus.ui.web.action.WebElementActions;
 import org.vividus.ui.web.action.search.WebLocatorType;
 import org.vividus.ui.web.util.LocatorUtil;
 
-@RunWith(PowerMockRunner.class)
-public class ElementStepsTests
+@ExtendWith(MockitoExtension.class)
+class ElementStepsTests
 {
     private static final String PARENT_ELEMENT_HAS_CHILD = "Parent element has number of child elements which";
     private static final String AN_ELEMENT_TO_CLICK = "An element to click";
@@ -97,57 +92,24 @@ public class ElementStepsTests
     private static final String ELEMENT_XPATH = "elementXpath";
     private static final String CHILD_XPATH = "childXpath";
     private static final String THE_NUMBER_OF_PARENT_ELEMENTS = "The number of parent elements";
+    private static final String ELEMENTS_TO_CLICK = "The elements to click";
 
-    @Mock
-    private IBaseValidations baseValidations;
-
-    @Mock
-    private IMouseActions mouseActions;
-
-    @Mock
-    private IWebDriverProvider webDriverProvider;
-
-    @Mock
-    private IElementValidations elementValidations;
-
-    @Mock
-    private IUiContext uiContext;
-
-    @Mock
-    private WebElementActions webElementActions;
-
-    @Mock
-    private WebElement webElement;
-
-    @Mock
-    private WebElement bodyElement;
-
-    @Mock
-    private WebDriver webDriver;
-
-    @Mock
-    private SearchContext searchContext;
-
-    @InjectMocks
-    private ElementSteps elementSteps;
+    @Mock private IBaseValidations baseValidations;
+    @Mock private IMouseActions mouseActions;
+    @Mock private IWebDriverProvider webDriverProvider;
+    @Mock private IElementValidations elementValidations;
+    @Mock private IUiContext uiContext;
+    @Mock private WebElementActions webElementActions;
+    @Mock private WebElement webElement;
+    @Mock private WebElement bodyElement;
+    @Mock private WebDriver webDriver;
+    @InjectMocks private ElementSteps elementSteps;
 
     @Mock
     private IDescriptiveSoftAssert softAssert;
 
-    private List<WebElement> elementsList;
-
-    @Before
-    public void before()
-    {
-        MockitoAnnotations.initMocks(this);
-        when(uiContext.getSearchContext()).thenReturn(webElement);
-        when(webDriverProvider.get()).thenReturn(webDriver);
-        elementsList = new ArrayList<>();
-        elementsList.add(webElement);
-    }
-
     @Test
-    public void testContextClickElementByLocator()
+    void testContextClickElementByLocator()
     {
         Locator locator = new Locator(WebLocatorType.XPATH, XPATH);
         when(baseValidations.assertIfElementExists(AN_ELEMENT_TO_CLICK, locator)).thenReturn(webElement);
@@ -156,7 +118,7 @@ public class ElementStepsTests
     }
 
     @Test
-    public void testClickOnElementByLocator()
+    void testClickOnElementByLocator()
     {
         Locator locator = new Locator(WebLocatorType.ELEMENT_NAME, ELEMENT_NAME);
         when(baseValidations.assertIfElementExists(AN_ELEMENT_WITH_THE_ATTRIBUTES, locator))
@@ -166,29 +128,28 @@ public class ElementStepsTests
     }
 
     @Test
-    public void testClickAllElementsByLocator()
+    void testClickAllElementsByLocator()
     {
         Locator locator = new Locator(WebLocatorType.XPATH, XPATH);
-        when(baseValidations
-                .assertIfElementsExist("The elements to click", locator))
-                .thenReturn(Arrays.asList(webElement, webElement));
+        when(baseValidations.assertIfElementsExist(ELEMENTS_TO_CLICK, locator)).thenReturn(
+                List.of(webElement, webElement));
         elementSteps.clickOnAllElements(locator);
         verify(mouseActions, times(2)).click(webElement);
     }
 
     @Test
-    public void testClickAllElementsByLocatorNoElements()
+    void testClickAllElementsByLocatorNoElements()
     {
         Locator locator = new Locator(WebLocatorType.XPATH, XPATH);
-        when(baseValidations.assertIfElementsExist("Elements to click",
-                locator)).thenReturn(List.of());
+        when(baseValidations.assertIfElementsExist(ELEMENTS_TO_CLICK, locator)).thenReturn(List.of());
         elementSteps.clickOnAllElements(locator);
         verifyNoInteractions(mouseActions);
     }
 
     @Test
-    public void testIsElementHasRightWidth()
+    void testIsElementHasRightWidth()
     {
+        when(webDriverProvider.get()).thenReturn(webDriver);
         int widthInPerc = 50;
         when(uiContext.getSearchContext(WebElement.class)).thenReturn(webElement);
         when(baseValidations.assertIfElementExists("'Body' element", webDriverProvider.get(),
@@ -199,7 +160,7 @@ public class ElementStepsTests
     }
 
     @Test
-    public void testIsElementHasWidthRelativeToTheParentElement()
+    void testIsElementHasWidthRelativeToTheParentElement()
     {
         int width = 50;
         when(uiContext.getSearchContext(WebElement.class)).thenReturn(webElement);
@@ -210,7 +171,7 @@ public class ElementStepsTests
     }
 
     @Test
-    public void testIsElementHasRightCss()
+    void testIsElementHasRightCss()
     {
         mockWebElementCssValue();
         elementSteps.doesElementHaveRightCss(CSS_NAME, CSS_VALUE);
@@ -218,16 +179,16 @@ public class ElementStepsTests
     }
 
     @Test
-    public void testIsNullElementHasRightCss()
+    void testIsNullElementHasRightCss()
     {
-        when(uiContext.getSearchContext()).thenReturn(null);
-        when(webElementActions.getCssValue(webElement, CSS_NAME)).thenReturn(CSS_VALUE);
+        when(uiContext.getSearchContext(WebElement.class)).thenReturn(null);
+        when(webElementActions.getCssValue(null, CSS_NAME)).thenReturn(null);
         elementSteps.doesElementHaveRightCss(CSS_NAME, CSS_VALUE);
         verify(softAssert).assertEquals(ELEMENT_HAS_CORRECT_CSS_PROPERTY_VALUE, CSS_VALUE, null);
     }
 
     @Test
-    public void testIsElementHasRightCssPart()
+    void testIsElementHasRightCssPart()
     {
         mockWebElementCssValue();
         elementSteps.doesElementHaveRightPartOfCssValue(CSS_NAME, CSS_PART_VALUE);
@@ -237,19 +198,19 @@ public class ElementStepsTests
     }
 
     @Test
-    public void doesEachElementByLocatorHaveChildWithLocatorSuccess()
+    void doesEachElementByLocatorHaveChildWithLocatorSuccess()
     {
         Locator elementLocator = new Locator(WebLocatorType.XPATH, LocatorUtil.getXPath(ELEMENT_XPATH));
         Locator childLocator = new Locator(WebLocatorType.XPATH, LocatorUtil.getXPath(CHILD_XPATH));
-        when(baseValidations.assertIfElementsExist(THE_NUMBER_OF_PARENT_ELEMENTS, elementLocator))
-                .thenReturn(Arrays.asList(webElement, webElement));
+        when(baseValidations.assertIfElementsExist(THE_NUMBER_OF_PARENT_ELEMENTS, elementLocator)).thenReturn(
+                List.of(webElement, webElement));
         elementSteps.doesEachElementByLocatorHaveChildWithLocator(elementLocator, 2, childLocator);
         verify(baseValidations, times(2)).assertIfExactNumberOfElementsFound(PARENT_ELEMENT_HAS_CHILD, webElement,
                 childLocator, 2);
     }
 
     @Test
-    public void doesEachElementByLocatorHaveChildWithLocatorNoElements()
+    void doesEachElementByLocatorHaveChildWithLocatorNoElements()
     {
         Locator elementLocator = new Locator(WebLocatorType.XPATH, LocatorUtil.getXPath(ELEMENT_XPATH));
         Locator childLocator = new Locator(WebLocatorType.XPATH, LocatorUtil.getXPath(CHILD_XPATH));
@@ -261,20 +222,19 @@ public class ElementStepsTests
     }
 
     @Test
-    public void testIsEachElementByXpathHasSameDimension()
+    void testIsEachElementByXpathHasSameDimension()
     {
         Dimension dimension = Dimension.HEIGHT;
-        elementsList.add(webElement);
-        when(uiContext.getSearchContext()).thenReturn(searchContext);
+        List<WebElement> elements = List.of(webElement, webElement);
         Locator locator = new Locator(WebLocatorType.XPATH, XPATH);
         when(baseValidations.assertIfAtLeastNumberOfElementsExist("The number of found elements", locator, 2))
-                .thenReturn(elementsList);
+                .thenReturn(elements);
         elementSteps.doesEachElementByLocatorHaveSameDimension(locator, dimension);
-        verify(elementValidations).assertAllWebElementsHaveEqualDimension(elementsList, dimension);
+        verify(elementValidations).assertAllWebElementsHaveEqualDimension(elements, dimension);
     }
 
     @Test
-    public void testHoverMouseOverAnElementByLocator()
+    void testHoverMouseOverAnElementByLocator()
     {
         Locator locator = new Locator(WebLocatorType.ELEMENT_NAME, ELEMENT_NAME);
         when(baseValidations.assertIfElementExists(AN_ELEMENT_WITH_THE_ATTRIBUTES, locator))
@@ -284,7 +244,7 @@ public class ElementStepsTests
     }
 
     @Test
-    public void testClickElementWithTextPageNotRefresh()
+    void testClickElementWithTextPageNotRefresh()
     {
         ClickResult clickResult = new ClickResult();
         clickResult.setNewPageLoaded(false);
@@ -297,7 +257,7 @@ public class ElementStepsTests
     }
 
     @Test
-    public void testLoadFileNotRemote() throws IOException
+    void testLoadFileNotRemote() throws IOException
     {
         File file = mockFileForUpload();
         mockResourceLoader(mockResource(ABSOLUTE_PATH, file, true));
@@ -311,34 +271,39 @@ public class ElementStepsTests
     }
 
     @Test
-    @PrepareForTest({ ElementSteps.class, FileUtils.class })
-    public void testLoadFileFromJar() throws Exception
+    void testLoadFileFromJar() throws IOException
     {
-        File file = mockFileForUpload();
-        PowerMockito.mockStatic(FileUtils.class);
-        PowerMockito.whenNew(File.class).withArguments(FILE_PATH).thenReturn(file);
-        Resource resource = mockResource("jar:file:/D:/archive.jar!/file.txt", file, true);
-        InputStream inputStream = new ByteArrayInputStream(TEXT.getBytes(StandardCharsets.UTF_8));
-        when(resource.getInputStream()).thenReturn(inputStream);
-        mockResourceLoader(resource);
-        when(softAssert.assertTrue(FILE_FILE_PATH_EXISTS, true)).thenReturn(true);
-        Locator locator = new Locator(WebLocatorType.XPATH,
-                new SearchParameters(XPATH).setVisibility(Visibility.ALL));
-        when(baseValidations.assertIfElementExists(AN_ELEMENT, locator)).thenReturn(webElement);
-        elementSteps.uploadFile(locator, FILE_PATH);
-        verify(webElement).sendKeys(ABSOLUTE_PATH);
-        PowerMockito.verifyStatic(FileUtils.class);
-        FileUtils.copyInputStreamToFile(eq(resource.getInputStream()), any(File.class));
+        try (MockedStatic<FileUtils> fileUtils = mockStatic(FileUtils.class);
+                MockedConstruction<File> fileMock = mockConstruction(File.class, (mock, context) -> {
+                    assertEquals(List.of(FILE_PATH), context.arguments());
+                    when(mock.exists()).thenReturn(true);
+                    when(mock.getAbsolutePath()).thenReturn(ABSOLUTE_PATH);
+                })
+        )
+        {
+            Resource resource = mock(Resource.class);
+            when(resource.exists()).thenReturn(true);
+            when(resource.getURL()).thenReturn(new URL("jar:file:/D:/archive.jar!/file.txt"));
+            InputStream inputStream = new ByteArrayInputStream(TEXT.getBytes(StandardCharsets.UTF_8));
+            when(resource.getInputStream()).thenReturn(inputStream);
+            mockResourceLoader(resource);
+            when(softAssert.assertTrue(FILE_FILE_PATH_EXISTS, true)).thenReturn(true);
+            Locator locator = new Locator(WebLocatorType.XPATH,
+                    new SearchParameters(XPATH).setVisibility(Visibility.ALL));
+            when(baseValidations.assertIfElementExists(AN_ELEMENT, locator)).thenReturn(webElement);
+            elementSteps.uploadFile(locator, FILE_PATH);
+            verify(webElement).sendKeys(ABSOLUTE_PATH);
+            File file = fileMock.constructed().get(0);
+            fileUtils.verify(() -> FileUtils.copyInputStreamToFile(resource.getInputStream(), file));
+        }
     }
 
     @Test
-    public void testLoadFileRemote() throws IOException
+    void testLoadFileRemote() throws IOException
     {
         File file = mockFileForUpload();
         mockResourceLoader(mockResource(ABSOLUTE_PATH, file, true));
         mockRemoteWebDriver();
-        WebDriver webDriver = mock(WebDriver.class, withSettings().extraInterfaces(WrapsDriver.class));
-        when(webDriverProvider.get()).thenReturn(webDriver);
         when(softAssert.assertTrue(FILE_FILE_PATH_EXISTS, true)).thenReturn(true);
         when(webDriverProvider.isRemoteExecution()).thenReturn(true);
         Locator locator = new Locator(WebLocatorType.XPATH,
@@ -349,14 +314,12 @@ public class ElementStepsTests
     }
 
     @Test
-    public void testLoadFileFromFilesystem() throws IOException
+    void testLoadFileFromFilesystem() throws IOException
     {
         Resource resource = mockResource(ABSOLUTE_PATH, mockFileForUpload(), false);
         ResourceLoader resourceLoader = mockResourceLoader(resource);
         when(resourceLoader.getResource(ResourceUtils.FILE_URL_PREFIX + FILE_PATH)).thenReturn(resource);
         mockRemoteWebDriver();
-        WebDriver webDriver = mock(WebDriver.class, withSettings().extraInterfaces(WrapsDriver.class));
-        when(webDriverProvider.get()).thenReturn(webDriver);
         when(softAssert.assertTrue(FILE_FILE_PATH_EXISTS, true)).thenReturn(true);
         when(webDriverProvider.isRemoteExecution()).thenReturn(true);
         Locator locator = new Locator(WebLocatorType.XPATH,
@@ -367,7 +330,7 @@ public class ElementStepsTests
     }
 
     @Test
-    public void testLoadFileRemoteSimpleDriver() throws IOException
+    void testLoadFileRemoteSimpleDriver() throws IOException
     {
         File file = mockFileForUpload();
         mockResourceLoader(mockResource(ABSOLUTE_PATH, file, true));
@@ -382,9 +345,10 @@ public class ElementStepsTests
     }
 
     @Test
-    public void testLoadFileNoFile() throws IOException
+    void testLoadFileNoFile() throws IOException
     {
-        File file = mockFileForUpload();
+        File file = mock(File.class);
+        when(file.exists()).thenReturn(true);
         mockResourceLoader(mockResource(ABSOLUTE_PATH, file, true));
         Locator locator = new Locator(WebLocatorType.XPATH,
                 new SearchParameters(XPATH).setVisibility(Visibility.ALL));
@@ -393,16 +357,15 @@ public class ElementStepsTests
     }
 
     @Test
-    public void testLoadFileNoElement() throws IOException
+    void testLoadFileNoElement() throws IOException
     {
         File file = mockFileForUpload();
         mockResourceLoader(mockResource(ABSOLUTE_PATH, file, true));
         when(softAssert.assertTrue(FILE_FILE_PATH_EXISTS, true)).thenReturn(true);
         when(webDriverProvider.isRemoteExecution()).thenReturn(false);
-        when(baseValidations.assertIfElementExists(AN_ELEMENT, new Locator(WebLocatorType.XPATH,
-                new SearchParameters(LOCATOR_BY_ATTRIBUTE, Visibility.ALL)))).thenReturn(null);
         Locator locator = new Locator(WebLocatorType.XPATH,
-                new SearchParameters(XPATH).setVisibility(Visibility.ALL));
+                new SearchParameters(LOCATOR_BY_ATTRIBUTE).setVisibility(Visibility.ALL));
+        when(baseValidations.assertIfElementExists(AN_ELEMENT, locator)).thenReturn(null);
         elementSteps.uploadFile(locator, FILE_PATH);
         verify(webElement, never()).sendKeys(ABSOLUTE_PATH);
     }
